# back-RestoMap

./: .dockerignore  .env.example  .env.gcp.template  .gitignore  Dockerfile  Dockerfile.backend  README.md  TSS.sql  alembic.ini  docker-compose.yml  dockerfile.backend  main.py  pyproject.toml  pyrefly.toml  requirements.txt  ruff.toml  test_pedidos.ps1  test_pedidos.sh
.github/workflow/: prod-subir.yml
.github/workflows/: deploy-prod.yml  deploy_back-prueba-gcp.yml  deploy_back.yml  deploy_qa.yml
.guias/: CHECKLIST.md  DEPLOYMENT.md  POETRY_GUIDE.md  RUFF_GUIDE.md
alembic/: env.py
alembic/versions/: 0a6d2bd87fb9_agregar_campo_id_local_a_usuario.py  2025_12_04_1908-e8d768bdd4c6_migracion_inicial_con_dependencias_.py  451d73b4102a_migracion_inicial.py  999eb7469dea_agregar_campo_descripcion_a_tabla_local.py  e4275ec7890a_agregar_campo_calle_a_tabla_direccion.py  f7e8fcdc9a00_migracion_inicial_completa.py
app/api/: README.md
app/bd/: README.md
config/: crear_db_sqla.py
db/: __init__.py  base.py  sesion.py  tablas_fijas.py
migraciones/: env.py
modelos/: __init__.py  categoria.py  comuna.py  cuenta.py  direccion.py  encomienda.py  encomienda_cuenta.py  estado_pedido.py  favorito.py  foto.py  horario.py  local.py  mesa.py  opinion.py  pago.py  pedido.py  producto.py  qr_dinamico.py  redes.py  reserva.py  reserva_mesa.py  rol.py  tipo_foto.py  tipo_local.py  tipo_red.py  usuario.py
schemas/: ENUMS.py  base.py  usuario.py
scripts/: init_db.ps1  init_db.sh  migrate_gcp.py  setup_local.ps1  setup_local.sh
src/: database.py  init_tables.py  main.py
src/config/: __init__.py  config.py  logging.py
src/dashboard_mesero/: README.md  __init__.py  routes.py  schemas.py  services.py
src/db/: seed.py
src/db/seeds/: __init__.py  catalogs.py  interactions.py  locals.py  orders.py  products.py  qr.py  reservations.py  roles.py  users.py
src/exceptions/: __init__.py  base.py  http.py
src/middleware/: __init__.py  error_handler.py  logging.py  request_id.py
src/models/: __init__.py  models.py
src/routes/: __init__.py  auth.py  favoritos.py  gestionlocal.py  invitaciones.py  locales.py  opiniones.py  reservas.py
src/routes/cliente/: __init__.py  pedidos.py
src/routes/empresa/: __init__.py  categorias.py  debug.py  empleados.py  encomiendas.py  fotos.py  local.py  mesas.py  pedidos.py  productos.py  reservas.py  stats.py
src/schemas/: __init__.py  auth.py  common.py  favorito.py  local.py  opinion.py  pedido.py  reserva.py
src/services/: acteco_mapping.py  qr_service.py  rut_service.py  verificador_pedidos.py
src/utils/: jwt_helper.py  validation.py
src/websockets/: __init__.py  core.py  emitters.py  handlers.py
