[tool.poetry]
name = "restomap-backend"
version = "0.1.0"
description = "Backend del sistema RestoMap - Gestión de restaurantes"
authors = ["Proyecto SDS"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.10"
alembic = "^1.17.2"
annotated-types = "^0.7.0"
blinker = "^1.9.0"
click = "^8.3.1"
colorama = "^0.4.6"
dnspython = "^2.8.0"
email-validator = "^2.3.0"
flask = "^3.1.2"
flask-cors = "^6.0.1"
flask-migrate = "^4.1.0"
flask-sqlalchemy = "^3.1.1"
greenlet = "^3.3.0"
gunicorn = "^23.0.0"
idna = "^3.11"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
mako = "^1.3.10"
markupsafe = "^3.0.3"
packaging = "^25.0"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
pyjwt = "^2.10.1"
bcrypt = "^5.0.0"
pydantic-core = "^2.41.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
sqlalchemy = "^2.0.44"
typing-extensions = "^4.15.0"
typing-inspection = "^0.4.2"
werkzeug = "^3.1.4"
qrcode = "^8.2"
pillow = "^12.0.0"
pyrefly = "^0.44.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["."]

[tool.poetry.urls]
repository = "https://github.com/Proyecto-SDS/back-RestoMap"
