[tool.poetry]
name = "restomap-backend"
version = "0.1.0"
description = "Backend del sistema RestoMap - Gestión de restaurantes"
authors = ["Proyecto SDS"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.10"
alembic = "^1.17.2"
annotated-types = "^0.7.0"
blinker = "^1.9.0"
click = "^8.3.1"
colorama = "^0.4.6"
dnspython = "^2.8.0"
email-validator = "^2.3.0"
flask = "^3.1.2"
flask-cors = "^6.0.1"
flask-migrate = "^4.1.0"
flask-sqlalchemy = "^3.1.1"
greenlet = "^3.3.0"
gunicorn = "^23.0.0"
idna = "^3.11"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
mako = "^1.3.10"
markupsafe = "^3.0.3"
packaging = "^25.0"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
pyjwt = "^2.10.1"
bcrypt = "^5.0.0"
pydantic-core = "^2.41.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
sqlalchemy = "^2.0.44"
typing-extensions = "^4.15.0"
typing-inspection = "^0.4.2"
werkzeug = "^3.1.4"
qrcode = "^8.2"
pillow = "^12.0.0"
pyrefly = "^0.44.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================
# CONFIGURACIÓN DE ALEMBIC (PEP 621)
# ============================================
[tool.alembic]
# Ruta a los scripts de migración
script_location = "alembic"

# Rutas adicionales a agregar a sys.path
prepend_sys_path = [
    ".",
    "src"
]

# Plantilla para nombres de archivos de migración
# Formato: AAAA_MM_DD_HHMM-{rev}_{slug}
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# Zona horaria para timestamps (requiere python>=3.9)
timezone = "America/Santiago"

# Longitud máxima del campo "slug"
truncate_slug_length = 40

# Ejecutar environment durante 'revision' command
revision_environment = false

# Permitir archivos .pyc/.pyo sin .py
sourceless = false

# Búsqueda recursiva en directorios de versiones
recursive_version_locations = false

# Encoding de salida
output_encoding = "utf-8"

# Post-write hooks para formatear código generado
# DESHABILITADO: ruff no está disponible en el contenedor de producción
# Para formatear migraciones localmente, ejecuta: ruff format alembic/versions/
# [[tool.alembic.post_write_hooks]]
# name = "ruff"
# type = "console_scripts"
# entrypoint = "ruff"
# options = "format REVISION_SCRIPT_FILENAME"

[tool.poetry.urls]
repository = "https://github.com/Proyecto-SDS/back-RestoMap"
