[tool.poetry]
name = "restomap-backend"
version = "1.0.0"
description = "Backend del sistema RestoMap - Gestion de restaurantes"
authors = ["Proyecto SDS"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Framework Web
flask = "^3.1.2"
flask-cors = "^6.0.1"
flask-migrate = "^4.1.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
werkzeug = "^3.1.4"

# Base de datos
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"

# Validacion y tipos
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
email-validator = "^2.3.0"

# Autenticacion
pyjwt = "^2.10.1"
bcrypt = "^5.0.0"

# Utilidades
python-dotenv = "^1.2.1"
qrcode = "^8.2"
pillow = "^12.0.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"
pyrefly = "^0.44.1"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================
# RUFF - Mover configuracion aqui (recomendado)
# ============================================
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

exclude = [
    ".venv",
    "venv",
    "alembic",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C90",   # mccabe
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # Pylint
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (lo maneja el formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "C901",    # Complex function
    "PLC0415", # Import outside top-level
    "ARG001",  # Too many arguments
    "E402",    # Module level import not at top of file
]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "models", "routes", "schemas", "services", "utils", "middleware", "exceptions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================
# PYTEST
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ============================================
# COVERAGE
# ============================================
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.poetry.urls]
repository = "https://github.com/Proyecto-SDS/back-RestoMap"
